Fix html-report format by hiding `.card .text .info.date` (which grew overflow content beyond limits)

--- a/Report/HtmlReportStyle.css
+++ b/Report/HtmlReportStyle.css
@@ -219,3 +219,8 @@ body.withOverlay #content {
 	visibility: collapse;
 	display: none;
 }
+
+.card .text .info.date {
+	visibility: collapse;
+	display: none;
+}
